[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/game/ui/inventory/inventory_ui.gd" id="1_inv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_all = 5

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inv")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Left" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="HBox/Left"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "INVENTORY"

[node name="Scroll" type="ScrollContainer" parent="HBox/Left"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Grid" type="GridContainer" parent="HBox/Left/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 8

[node name="Right" type="Panel" parent="HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="HBox/Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Name" type="Label" parent="HBox/Right/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select an item"
horizontal_alignment = 1

[node name="Description" type="Label" parent="HBox/Right/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBox/Right/VBox"]
layout_mode = 2

[node name="Stats" type="RichTextLabel" parent="HBox/Right/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ActionBtn" type="Button" parent="HBox/Right"]
visible = false
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -120.0
offset_right = -50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
text = "USE ITEM"

[node name="Back" type="Button" parent="HBox/Right"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -60.0
offset_right = -50.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "CLOSE"

[connection signal="pressed" from="HBox/Right/ActionBtn" to="." method="_on_action_pressed"]
[connection signal="pressed" from="HBox/Right/Back" to="." method="_on_back_pressed"]